// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Radio - disabled 1`] = `
<div
  className="sdc-radio "
>
  <input
    checked={false}
    className="sdc-radio__input"
    data-test-id={undefined}
    disabled={true}
    name="grp2"
    onChange={[Function]}
    type="radio"
    value="1"
  />
  <label
    className="sdc-radio__label"
  >
    This is the radio label
  </label>
</div>
`;

exports[`Radio Radio - unchecked 1`] = `
<div
  className="sdc-radio "
>
  <input
    checked={false}
    className="sdc-radio__input"
    data-test-id={undefined}
    disabled={undefined}
    name="grp4"
    onChange={[Function]}
    type="radio"
    value="1"
  />
  <label
    className="sdc-radio__label"
  >
    This is the radio label
  </label>
</div>
`;
